airflow/logs/scheduler/2023-06-16/prueba-ssh/dag.py.log
[2023-06-16T18:45:06.952+0000] {processor.py:157} INFO - Started process (PID=1028) to work on /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:06.956+0000] {processor.py:826} INFO - Processing file /opt/airflow/dags/prueba-ssh/dag.py for tasks to queue
[2023-06-16T18:45:06.959+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:45:06.958+0000] {dagbag.py:541} INFO - Filling up the DagBag from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:06.996+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:45:06.991+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/prueba-ssh/dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/prueba-ssh/dag.py", line 25, in <module>
    dag=dag,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/ssh/operators/ssh.py", line 94, in __init__
    super().__init__(**kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 789, in __init__
    f"Invalid arguments were passed to {self.__class__.__name__} (task_id: {task_id}). "
airflow.exceptions.AirflowException: Invalid arguments were passed to SSHOperator (task_id: create_file). Invalid arguments were:
**kwargs: {'username': 'hola'}
[2023-06-16T18:45:06.998+0000] {processor.py:838} WARNING - No viable dags retrieved from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:07.081+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/prueba-ssh/dag.py took 0.145 seconds
[2023-06-16T18:45:37.345+0000] {processor.py:157} INFO - Started process (PID=1036) to work on /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:37.347+0000] {processor.py:826} INFO - Processing file /opt/airflow/dags/prueba-ssh/dag.py for tasks to queue
[2023-06-16T18:45:37.350+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:45:37.349+0000] {dagbag.py:541} INFO - Filling up the DagBag from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:37.378+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:45:37.373+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/prueba-ssh/dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/prueba-ssh/dag.py", line 25, in <module>
    dag=dag,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/ssh/operators/ssh.py", line 94, in __init__
    super().__init__(**kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 789, in __init__
    f"Invalid arguments were passed to {self.__class__.__name__} (task_id: {task_id}). "
airflow.exceptions.AirflowException: Invalid arguments were passed to SSHOperator (task_id: create_file). Invalid arguments were:
**kwargs: {'username': 'hola'}
[2023-06-16T18:45:37.380+0000] {processor.py:838} WARNING - No viable dags retrieved from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:45:37.449+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/prueba-ssh/dag.py took 0.115 seconds
[2023-06-16T18:46:07.693+0000] {processor.py:157} INFO - Started process (PID=1045) to work on /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:07.697+0000] {processor.py:826} INFO - Processing file /opt/airflow/dags/prueba-ssh/dag.py for tasks to queue
[2023-06-16T18:46:07.699+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:46:07.698+0000] {dagbag.py:541} INFO - Filling up the DagBag from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:07.724+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:46:07.719+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/prueba-ssh/dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/prueba-ssh/dag.py", line 25, in <module>
    dag=dag,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/ssh/operators/ssh.py", line 94, in __init__
    super().__init__(**kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 429, in apply_defaults
    result = func(self, **kwargs, default_args=default_args)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/baseoperator.py", line 789, in __init__
    f"Invalid arguments were passed to {self.__class__.__name__} (task_id: {task_id}). "
airflow.exceptions.AirflowException: Invalid arguments were passed to SSHOperator (task_id: create_file). Invalid arguments were:
**kwargs: {'username': 'hola'}
[2023-06-16T18:46:07.725+0000] {processor.py:838} WARNING - No viable dags retrieved from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:07.789+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/prueba-ssh/dag.py took 0.110 seconds
[2023-06-16T18:46:29.977+0000] {processor.py:157} INFO - Started process (PID=1054) to work on /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:29.979+0000] {processor.py:826} INFO - Processing file /opt/airflow/dags/prueba-ssh/dag.py for tasks to queue
[2023-06-16T18:46:29.982+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:46:29.981+0000] {dagbag.py:541} INFO - Filling up the DagBag from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:29.990+0000] {logging_mixin.py:149} INFO - [2023-06-16T18:46:29.987+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/prueba-ssh/dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/prueba-ssh/dag.py", line 26
    dag=dag,
      ^
SyntaxError: invalid syntax
[2023-06-16T18:46:29.992+0000] {processor.py:838} WARNING - No viable dags retrieved from /opt/airflow/dags/prueba-ssh/dag.py
[2023-06-16T18:46:30.059+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/prueba-ssh/dag.py took 0.093 seconds
